2001-09-20  Sam Steingold  <sds@gnu.org>

	fixed WITH-COMPILATION-UNIT
	* compiler.lisp (compile-warnings-p, compile-failure-p): new
	helper functions
	(compile, compile-file): use them
	(c-report-problems): call c-reset-globals
	(with-compilation-unit): bind *error-count* *warning-count* and
	*style-warning-count* when *c-top-call*
	(compile-file): use with-compilation-unit
	(compile): flet closure-slot

2001-09-20  Sam Steingold  <sds@gnu.org>

	handle *PRINT-LEVEL* for CLOS instances correctly
	* io.d (pr_instance, pr_structure_external): do level check
	(pr_structure): do not do level check

2001-09-20  Sam Steingold  <sds@gnu.org>

	PPRINT-LOGICAL-BLOCK supports *PRINT-CIRCLE* and *PRINT-LENGTH*
	* pprint.lisp (pprint-pop): handle *PRINT-LENGTH* & *PRINT-CIRCLE*
	* constsym.d, subr.d (pcirclep): added
	* io.d (double_dots): do not set *PRIN-LINES* to :END
	(string_fit_line_p): take a third arg offset
	(pr_enter_1): do not print TAB before NL
	(pprin_object, pprin_object_dispatch): new pr_routine_t
	(pprint_lisp): removed
	(%PPRINT-LOGICAL-BLOCK): use pprin_object instead of pprint_lisp
	(%CIRCLEP): new LISPFUNN

2001-09-19  Sam Steingold  <sds@gnu.org>

	* io.d (format_tab): ASSERT that the return value is >=0

2001-09-19  Sam Steingold  <sds@gnu.org>

	* makemake.in (DEBUGGING): handle on win32msvc

2001-09-17  Sam Steingold  <sds@gnu.org>

	finished the Pretty-Printer
	* constsym.d, subr.d (FORMAT-TABULATE): added
	* format.lisp (format-tabulate): commented out
	* lispbibl.d (cons_ssstring): take args
	(PUSH_CONS, PPHELP_PUSH, PPHELP_NEW_STRING): removed
	* stream.d (make_pphelp_stream): call cons_ssstring() with args
	(wr_ch_pphelp): use cons_ssstring() instead of PPHELP_NEW_STRING()
	* io.d (strm_pphelp_strings): contains NL/indent/tab too
	(cons_ssstring): take 2 agrs - stream pointer and NL type
	(format_tab): new function
	(pprint_prefix): take an additional `prefix' arg
	(pphelp_newline): use cons_ssstring() instead of PPHELP_NEW_STRING()